--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   "homepage": "https://github.com/raacker/Gitfolio#readme",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "ejs": "^2.5.5",
     "express": "^4.14.0",
+    "fs": "0.0.1-security",
     "mongoose": "^4.7.2"
   }
 }
