--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "express": "^4.14.0",
     "express-session": "^1.14.2",
     "fs": "0.0.1-security",
-    "mongoose": "^4.7.2"
+    "mongoose": "^4.7.2",
+    "node-rest-client": "^2.0.1",
+    "octonode": "^0.7.7"
   }
 }
